# telco-customer-churn-end-to-end

./: .gitignore  README.md  pyproject.toml
config/: catalog.yml
notebooks/: download_data.ipynb  test_modelling.ipynb
src/: development.py  etl.py  load_data.py  mlflow_optuna.py  query_template.py  transform.py  util.py
src/archived/: xgb_model.py
visualization/: cat_variables.py  num_variables.py
